@@ -12,6 +12,7 @@ General:
 Lua:
  - Add Spring.Get{Game,Menu}Name to LuaUnsyncedRead, so LuaMenu and unsynced Lua handles know about each other
  - Add new callin (LuaMenu only) ActivateMenu() that is called whenever LuaMenu is on with no game loaded.
+ - Add Spring.SystemSleep(msecs) to allow Lua control on CPU/GPU limits in LuaMenu.
 
 Lua:
  ! Undeprecate {unit,feature}def.modelname and add .modeltype and .modelpath to
